--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react-datepicker": "^3.3.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "react-textarea-autosize": "^8.2.0",
-    "typescript": "~3.7.2"
+    "react-textarea-autosize": "^8.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,6 +49,7 @@
     "@types/react-datepicker": "^3.1.1",
     "@types/react-textarea-autosize": "^4.3.5",
     "gh-pages": "^3.1.0",
-    "node-sass": "^4.14.1"
+    "node-sass": "^4.14.1",
+    "typescript": "^3.9.10"
   }
 }
